@@ -2972,9 +2972,10 @@ Binds a mouse stroke sequence to a specified \fIfvwm2\fP built-in function,
 or removes the binding if \fIFunction\fP is '-'.  Definition is the same
 as for a mouse binding except that \fIsequence\fP is inserted in front of
 the button number. The \fIContext\fP and \fIModifiers\fP fields are defined
-as in the mouse binding.
+as in the mouse binding. At the present time it is preferable to use
+R as context and A as modifier.
 
-strokes are defined in a grid like this:
+Strokes are defined in a grid like this:
 .EX
  1  2  3
 
@@ -2985,19 +2986,29 @@ strokes are defined in a grid like this:
 Because of the default button menu in fvwm, you may need to dis-associate
 a mouse button binding before using the stroke
 .EX
-Mouse 0 R N -
+Mouse 3 R A
 .EE
-
 Also, you can still use Stroke sequence 0 to simulate a click
 .EX
-Stroke 0 2 R A Menu Window-Ops Nop
+Stroke 0 3 R A Menu WindowList Nop
 .EE
-
-The following example binds the built in window list to pop up when
-mouse drag in 'L' with button 2 pressed donw, no matter where the mouse
-pointer is:
+The following example start xterm when mouse drag in 'I' on the root
+window with button 3 pressed down:
 .EX
-Stroke 1478963 2 A A WindowList
+Stroke 258  3  R  A  Exec exec xterm
+.EE
+An example for Netscape:
+.EX
+Stroke 7415963    3  R  A  Exec exec netscape
+Stroke 74148963   3  R  A  Exec exec netscape
+Stroke 74158963   3  R  A  Exec exec netscape
+Stroke 7418963    3  R  A  Exec exec netscape
+Stroke 415963     3  R  A  Exec exec netscape
+.EE
+Note: You need LibStroke installed and fvwm2 compiled with stroke
+support. LibStroke can be obtained via anonymous ftp at
+.EX
+http://www.etla.net/~willey/projects/libstroke/
 .EE
 
 .IP "Style \fIwindowname options\fP"
